--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "dotenv": "^16.4.5",
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
+    "expo-file-system": "~17.0.1",
+    "expo-image-picker": "~15.0.7",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.13.2",
     "react": "18.2.0",
@@ -24,12 +26,12 @@
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-gifted-chat": "^2.6.3",
+    "react-native-modal": "^13.0.1",
     "react-native-reanimated": "^3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10",
-    "expo-image-picker": "~15.0.7",
-    "expo-file-system": "~17.0.1"
+    "react-native-toast-message": "^2.2.1",
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
