--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   "dependencies": {
     "@expo/metro-runtime": "~3.2.3",
     "@react-native-async-storage/async-storage": "^1.23.1",
-    "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-native-community/datetimepicker": "8.0.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "dotenv": "^16.4.5",
-    "expo": "~51.0.28",
+    "expo": "~51.0.38",
     "expo-constants": "~16.0.2",
     "expo-file-system": "~17.0.1",
     "expo-image-picker": "~15.0.7",
@@ -28,6 +28,7 @@
     "react-native-gesture-handler": "~2.16.1",
     "react-native-gifted-chat": "^2.6.3",
     "react-native-modal": "^13.0.1",
+    "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-reanimated": "^3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
